After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 790768 - Switching from "Mirror" to "Join Displays" doesn't reset resolutions
Switching from "Mirror" to "Join Displays" doesn't reset resolutions
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Display
3.26.x
Other Linux
: Normal normal
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-11-23 20:02 UTC by Benjamin Berg
Modified: 2017-12-08 16:09 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
display: Reset configuration when switching layouting modes (3.24 KB, patch)
2017-11-24 13:30 UTC, Benjamin Berg
committed Details | Review

Description Benjamin Berg 2017-11-23 20:02:34 UTC
When in "Join Displays" mode and one just selects "Mirror" to switch immediately back to"Join Displays" in the dialog (not activating the settings) then all displays have the same common resolution set.

The defaults should be restored when switching between modes.
Comment 1 Benjamin Berg 2017-11-24 13:30:49 UTC
Created attachment 364328 [details] [review]
display: Reset configuration when switching layouting modes

When switching between screen mirroring and joining displays the
configuration needs to be reset. Otherwise the monitor scaling will
not be set back to the current scaling again.

Split out the code to reset the current configuration and call that when
the mode is switched to ensure the changes are minimal.
Comment 2 Rui Matos 2017-11-24 16:37:26 UTC
Review of attachment 364328 [details] [review]:

looks fine, thanks. please push to both master and gnome-3-26

::: panels/display/cc-display-panel.c
@@ +1901,1 @@
   priv->current_output = NULL;

this line is already above so we can remove it here
Comment 3 Benjamin Berg 2017-12-08 16:09:26 UTC
Attachment 364328 [details] pushed as 0a57c67 - display: Reset configuration when switching layouting modes