display: Reset configuration when switching layouting modes

When switching between screen mirroring and joining displays the
configuration needs to be reset. Otherwise the monitor scaling will
not be set back to the current scaling again.

Split out the code to reset the current configuration and call that when
the mode is switched to ensure the changes are minimal.

https://bugzilla.gnome.org/show_bug.cgi?id=790768